@@ -221,7 +221,7 @@ public class VisibleMemberTable {
      */
     public List<Element> getAllVisibleMembers(Kind kind) {
         ensureInitialized();
-        return visibleMembers.getOrDefault(kind, Collections.emptyList());
+        return visibleMembers.getOrDefault(kind, List.of());
     }
 
     /**
@@ -234,7 +234,7 @@ public class VisibleMemberTable {
     public List<Element> getVisibleMembers(Kind kind, Predicate<Element> p) {
         ensureInitialized();
 
-        return visibleMembers.getOrDefault(kind, Collections.emptyList()).stream()
+        return visibleMembers.getOrDefault(kind, List.of()).stream()
                 .filter(p)
                 .toList();
     }
@@ -407,8 +407,8 @@ public class VisibleMemberTable {
     }
 
     private void computeParents() {
-        // suppress parents of annotation types
-        if (utils.isAnnotationType(te)) {
+        // suppress parents of annotation interfaces
+        if (utils.isAnnotationInterface(te)) {
             return;
         }
 
@@ -577,7 +577,7 @@ public class VisibleMemberTable {
 
     boolean isEnclosureInterface(Element e) {
         TypeElement enclosing = utils.getEnclosingTypeElement(e);
-        return utils.isInterface(enclosing);
+        return utils.isPlainInterface(enclosing);
     }
 
     boolean allowInheritedMethod(ExecutableElement inheritedMethod,
@@ -777,7 +777,7 @@ public class VisibleMemberTable {
                         addMember(e, Kind.FIELDS);
                         break;
                     case METHOD:
-                        if (utils.isAnnotationType(te)) {
+                        if (utils.isAnnotationInterface(te)) {
                             ExecutableElement ee = (ExecutableElement) e;
                             addMember(e, Kind.ANNOTATION_TYPE_MEMBER);
                             addMember(e, ee.getDefaultValue() == null
@@ -799,10 +799,10 @@ public class VisibleMemberTable {
             // Freeze the data structures
             for (Kind kind : Kind.values()) {
                 orderedMembers.computeIfPresent(kind, (k, v) -> Collections.unmodifiableList(v));
-                orderedMembers.computeIfAbsent(kind, t -> Collections.emptyList());
+                orderedMembers.computeIfAbsent(kind, t -> List.of());
 
                 memberMap.computeIfPresent(kind, (k, v) -> Collections.unmodifiableMap(v));
-                memberMap.computeIfAbsent(kind, t -> Collections.emptyMap());
+                memberMap.computeIfAbsent(kind, t -> Map.of());
             }
         }
 
@@ -840,12 +840,12 @@ public class VisibleMemberTable {
 
         List<Element> getMembers(String key, Kind kind) {
             Map<String, List<Element>> map = memberMap.get(kind);
-            return map.getOrDefault(key, Collections.emptyList());
+            return map.getOrDefault(key, List.of());
         }
 
         <T extends Element> List<T> getMembers(String key, Kind kind, Class<T> clazz) {
             Map<String, List<Element>> map = memberMap.get(kind);
-            return map.getOrDefault(key, Collections.emptyList())
+            return map.getOrDefault(key, List.of())
                     .stream()
                     .map(clazz::cast)
                     .toList();
@@ -901,7 +901,7 @@ public class VisibleMemberTable {
             return;
 
         PropertyUtils pUtils = config.propertyUtils;
-        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, Collections.emptyList())
+        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, List.of())
                 .stream()
                 .filter(e -> pUtils.isPropertyMethod((ExecutableElement) e))
                 .toList();
